vcs/specs/parser/fail/ffi/invalid_extern_fn.vr
// @test: parse-fail
// @level: L0
// @tags: parser, ffi, extern, function, error
// @description: Test malformed extern function declaration
// @expected-error: E018

extern "C" {
    fn malloc(size: Int -> &unsafe Byte;
}
